Fix: Notification buttons color, tables, sidebar on mobile

--- a/src/sass/_bootstrap-override.scss
+++ b/src/sass/_bootstrap-override.scss
@@ -879,7 +879,7 @@ legend {
 
   > .active {
     color: $body-main-color;
-    font-weight: $font-weight-semi-bold;
+    font-weight: $font-weight-normal;
     &:before {
       color: #323232;
     }
